--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: gray;
+    background: lightgray;
 }
 
 
@@ -18,6 +18,8 @@ body{
 
 .title {
     text-align: center;
+    background-color:black;
+	color: rgb(247, 243, 243);
     
 }
 
